# swagger.json
@@ -36,20 +36,232 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
-                  "example": "any"
+                "name": {
+                  "type": "string",
+                  "example": "John Doe"
                 },
-                "lastName": {
-                  "example": "any"
+                "bio": {
+                  "type": "string",
+                  "example": "This is my bio"
                 },
-                "email": {
-                  "example": "any"
+                "brand": {
+                  "type": "string",
+                  "example": "My Brand"
                 },
-                "favoriteColor": {
-                  "example": "any"
-                },
-                "birthday": {
-                  "example": "any"
+                "social_media": {
+                  "type": "object",
+                  "properties": {
+                    "Facebook": {
+                      "type": "object",
+                      "properties": {
+                        "user_handle": {
+                          "type": "string",
+                          "example": "john_doe"
+                        },
+                        "link_title": {
+                          "type": "string",
+                          "example": "John's Facebook Page"
+                        },
+                        "website": {
+                          "type": "string",
+                          "example": "facebook.com"
+                        },
+                        "url": {
+                          "type": "string",
+                          "example": "facebook.com/john_doe"
+                        }
+                      }
+                    },
+                    "Instagram": {
+                      "type": "object",
+                      "properties": {
+                        "user_handle": {
+                          "type": "string",
+                          "example": "john_doe"
+                        },
+                        "link_title": {
+                          "type": "string",
+                          "example": "John's Instagram Page"
+                        },
+                        "website": {
+                          "type": "string",
+                          "example": "instagram.com"
+                        },
+                        "url": {
+                          "type": "string",
+                          "example": "instagram.com/john_doe"
+                        }
+                      }
+                    },
+                    "Twitter": {
+                      "type": "object",
+                      "properties": {
+                        "user_handle": {
+                          "type": "string",
+                          "example": "john_doe"
+                        },
+                        "link_title": {
+                          "type": "string",
+                          "example": "John's Twitter Page"
+                        },
+                        "website": {
+                          "type": "string",
+                          "example": "twitter.com"
+                        },
+                        "url": {
+                          "type": "string",
+                          "example": "twitter.com/john_doe"
+                        }
+                      }
+                    },
+                    "LinkedIn": {
+                      "type": "object",
+                      "properties": {
+                        "user_handle": {
+                          "type": "string",
+                          "example": "john_doe"
+                        },
+                        "link_title": {
+                          "type": "string",
+                          "example": "John's LinkedIn Page"
+                        },
+                        "website": {
+                          "type": "string",
+                          "example": "linkedin.com"
+                        },
+                        "url": {
+                          "type": "string",
+                          "example": "linkedin.com/john_doe"
+                        }
+                      }
+                    },
+                    "Youtube": {
+                      "type": "object",
+                      "properties": {
+                        "user_handle": {
+                          "type": "string",
+                          "example": "john_doe"
+                        },
+                        "link_title": {
+                          "type": "string",
+                          "example": "John's YouTube Page"
+                        },
+                        "website": {
+                          "type": "string",
+                          "example": "youtube.com"
+                        },
+                        "url": {
+                          "type": "string",
+                          "example": "youtube.com/john_doe"
+                        }
+                      }
+                    },
+                    "Pinterest": {
+                      "type": "object",
+                      "properties": {
+                        "user_handle": {
+                          "type": "string",
+                          "example": "john_doe"
+                        },
+                        "link_title": {
+                          "type": "string",
+                          "example": "John's YouTube Page"
+                        },
+                        "website": {
+                          "type": "string",
+                          "example": "youtube.com"
+                        },
+                        "url": {
+                          "type": "string",
+                          "example": "youtube.com/john_doe"
+                        }
+                      }
+                    },
+                    "Snapchat": {
+                      "type": "object",
+                      "properties": {
+                        "user_handle": {
+                          "type": "string",
+                          "example": "john_doe"
+                        },
+                        "link_title": {
+                          "type": "string",
+                          "example": "John's YouTube Page"
+                        },
+                        "website": {
+                          "type": "string",
+                          "example": "youtube.com"
+                        },
+                        "url": {
+                          "type": "string",
+                          "example": "youtube.com/john_doe"
+                        }
+                      }
+                    },
+                    "Tiktok": {
+                      "type": "object",
+                      "properties": {
+                        "user_handle": {
+                          "type": "string",
+                          "example": "john_doe"
+                        },
+                        "link_title": {
+                          "type": "string",
+                          "example": "John's YouTube Page"
+                        },
+                        "website": {
+                          "type": "string",
+                          "example": "youtube.com"
+                        },
+                        "url": {
+                          "type": "string",
+                          "example": "youtube.com/john_doe"
+                        }
+                      }
+                    },
+                    "Reddit": {
+                      "type": "object",
+                      "properties": {
+                        "user_handle": {
+                          "type": "string",
+                          "example": "john_doe"
+                        },
+                        "link_title": {
+                          "type": "string",
+                          "example": "John's YouTube Page"
+                        },
+                        "website": {
+                          "type": "string",
+                          "example": "youtube.com"
+                        },
+                        "url": {
+                          "type": "string",
+                          "example": "youtube.com/john_doe"
+                        }
+                      }
+                    },
+                    "WhatsApp": {
+                      "type": "object",
+                      "properties": {
+                        "user_handle": {
+                          "type": "string",
+                          "example": "john_doe"
+                        },
+                        "link_title": {
+                          "type": "string",
+                          "example": "John's YouTube Page"
+                        },
+                        "website": {
+                          "type": "string",
+                          "example": "youtube.com"
+                        },
+                        "url": {
+                          "type": "string",
+                          "example": "youtube.com/john_doe"
+                        }
+                      }
+                    }
+                  }
                 }
               }
             }
@@ -87,31 +299,237 @@
         "description": "",
         "parameters": [
           {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
             "name": "body",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
-                  "example": "any"
+                "name": {
+                  "type": "string",
+                  "example": "John Doe"
                 },
-                "lastName": {
-                  "example": "any"
+                "bio": {
+                  "type": "string",
+                  "example": "This is my bio"
                 },
-                "email": {
-                  "example": "any"
+                "brand": {
+                  "type": "string",
+                  "example": "My Brand"
                 },
-                "favoriteColor": {
-                  "example": "any"
-                },
-                "birthday": {
-                  "example": "any"
+                "social_media": {
+                  "type": "object",
+                  "properties": {
+                    "Facebook": {
+                      "type": "object",
+                      "properties": {
+                        "user_handle": {
+                          "type": "string",
+                          "example": "john_doe"
+                        },
+                        "link_title": {
+                          "type": "string",
+                          "example": "John's Facebook Page"
+                        },
+                        "website": {
+                          "type": "string",
+                          "example": "facebook.com"
+                        },
+                        "url": {
+                          "type": "string",
+                          "example": "facebook.com/john_doe"
+                        }
+                      }
+                    },
+                    "Instagram": {
+                      "type": "object",
+                      "properties": {
+                        "user_handle": {
+                          "type": "string",
+                          "example": "john_doe"
+                        },
+                        "link_title": {
+                          "type": "string",
+                          "example": "John's Instagram Page"
+                        },
+                        "website": {
+                          "type": "string",
+                          "example": "instagram.com"
+                        },
+                        "url": {
+                          "type": "string",
+                          "example": "instagram.com/john_doe"
+                        }
+                      }
+                    },
+                    "Twitter": {
+                      "type": "object",
+                      "properties": {
+                        "user_handle": {
+                          "type": "string",
+                          "example": "john_doe"
+                        },
+                        "link_title": {
+                          "type": "string",
+                          "example": "John's Twitter Page"
+                        },
+                        "website": {
+                          "type": "string",
+                          "example": "twitter.com"
+                        },
+                        "url": {
+                          "type": "string",
+                          "example": "twitter.com/john_doe"
+                        }
+                      }
+                    },
+                    "LinkedIn": {
+                      "type": "object",
+                      "properties": {
+                        "user_handle": {
+                          "type": "string",
+                          "example": "john_doe"
+                        },
+                        "link_title": {
+                          "type": "string",
+                          "example": "John's LinkedIn Page"
+                        },
+                        "website": {
+                          "type": "string",
+                          "example": "linkedin.com"
+                        },
+                        "url": {
+                          "type": "string",
+                          "example": "linkedin.com/john_doe"
+                        }
+                      }
+                    },
+                    "Youtube": {
+                      "type": "object",
+                      "properties": {
+                        "user_handle": {
+                          "type": "string",
+                          "example": "john_doe"
+                        },
+                        "link_title": {
+                          "type": "string",
+                          "example": "John's YouTube Page"
+                        },
+                        "website": {
+                          "type": "string",
+                          "example": "youtube.com"
+                        },
+                        "url": {
+                          "type": "string",
+                          "example": "youtube.com/john_doe"
+                        }
+                      }
+                    },
+                    "Pinterest": {
+                      "type": "object",
+                      "properties": {
+                        "user_handle": {
+                          "type": "string",
+                          "example": "john_doe"
+                        },
+                        "link_title": {
+                          "type": "string",
+                          "example": "John's YouTube Page"
+                        },
+                        "website": {
+                          "type": "string",
+                          "example": "youtube.com"
+                        },
+                        "url": {
+                          "type": "string",
+                          "example": "youtube.com/john_doe"
+                        }
+                      }
+                    },
+                    "Snapchat": {
+                      "type": "object",
+                      "properties": {
+                        "user_handle": {
+                          "type": "string",
+                          "example": "john_doe"
+                        },
+                        "link_title": {
+                          "type": "string",
+                          "example": "John's YouTube Page"
+                        },
+                        "website": {
+                          "type": "string",
+                          "example": "youtube.com"
+                        },
+                        "url": {
+                          "type": "string",
+                          "example": "youtube.com/john_doe"
+                        }
+                      }
+                    },
+                    "Tiktok": {
+                      "type": "object",
+                      "properties": {
+                        "user_handle": {
+                          "type": "string",
+                          "example": "john_doe"
+                        },
+                        "link_title": {
+                          "type": "string",
+                          "example": "John's YouTube Page"
+                        },
+                        "website": {
+                          "type": "string",
+                          "example": "youtube.com"
+                        },
+                        "url": {
+                          "type": "string",
+                          "example": "youtube.com/john_doe"
+                        }
+                      }
+                    },
+                    "Reddit": {
+                      "type": "object",
+                      "properties": {
+                        "user_handle": {
+                          "type": "string",
+                          "example": "john_doe"
+                        },
+                        "link_title": {
+                          "type": "string",
+                          "example": "John's YouTube Page"
+                        },
+                        "website": {
+                          "type": "string",
+                          "example": "youtube.com"
+                        },
+                        "url": {
+                          "type": "string",
+                          "example": "youtube.com/john_doe"
+                        }
+                      }
+                    },
+                    "WhatsApp": {
+                      "type": "object",
+                      "properties": {
+                        "user_handle": {
+                          "type": "string",
+                          "example": "john_doe"
+                        },
+                        "link_title": {
+                          "type": "string",
+                          "example": "John's YouTube Page"
+                        },
+                        "website": {
+                          "type": "string",
+                          "example": "youtube.com"
+                        },
+                        "url": {
+                          "type": "string",
+                          "example": "youtube.com/john_doe"
+                        }
+                      }
+                    }
+                  }
                 }
               }
             }
